src/test/contracts/negative/export_attr_const.jsligo
@no_mutation export
const toto: D.titi = E.toto;
